// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`anchor target: should allow _blank if using HTML 1`] = `"<p><a href=\\"https://example.com\\" target=\\"_blank\\">test</a></p>"`;

exports[`anchor target: should default to _self 1`] = `"<p><a href=\\"https://example.com\\" target=\\"_self\\">test</a></p>"`;

exports[`anchors 1`] = `
"<p><a href=\\"http://example.com\\" target=\\"_self\\">link</a><br/>
<a href=\\"\\" target=\\"_self\\">xss</a><br/>
<a href=\\"/docs/slug\\" target=\\"_self\\" class=\\"doc-link\\" data-sidebar=\\"slug\\">doc</a><br/>
<a href=\\"/reference-link/slug\\" target=\\"_self\\">ref</a><br/>
<a href=\\"/changelog/slug\\" target=\\"_self\\">blog</a><br/>
<a href=\\"/changelog/slug\\" target=\\"_self\\">changelog</a><br/>
<a href=\\"/page/slug\\" target=\\"_self\\">page</a><br/>
</p>"
`;

exports[`anchors with baseUrl 1`] = `
"<p><a href=\\"doc:slug\\">doc</a><br>
<a href=\\"ref:slug\\">ref</a><br>
<a href=\\"blog:slug\\">blog</a><br>
<a href=\\"changelog:slug\\">changelog</a><br>
<a href=\\"page:slug\\">page</a><br>
</p>"
`;

exports[`check list items 1`] = `
"<ul>
<li><input type=\\"checkbox\\" disabled=\\"\\"/> checklistitem1</li>
<li><input type=\\"checkbox\\" checked=\\"\\" disabled=\\"\\"/> checklistitem1</li>
</ul>"
`;

exports[`code samples 1`] = `
"<pre><code class=\\"lang-javascript\\" data-lang=\\"javascript\\" name=\\"var\\"><span class=\\"cm-s-neo\\"><span class=\\"cm-variable\\">a</span> <span class=\\"cm-operator\\">=</span> <span class=\\"cm-number\\">1</span>;
</span></code></pre>
<pre><code data-lang=\\"\\" name=\\"\\"><span class=\\"cm-s-neo\\">code-without-language
</span></code></pre>"
`;

exports[`emojis 1`] = `
"<p><img src=\\"/img/emojis/joy.png\\" alt=\\":joy:\\" title=\\":joy:\\" class=\\"emoji\\" height=\\"auto\\" width=\\"auto\\"/><br/>
<i class=\\"fa fa-lock\\"></i><br/>
:unknown-emoji:<br/>
</p>"
`;

exports[`export multiple Markdown renderers renders custom React components 1`] = `
<DivFragment>
  <pre>
    <Code
      className="language-javascript"
      lang="javascript"
      meta="single.js"
    >
      console.log('a single sample code block');

    </Code>
  </pre>
  

  <hr />
  

  <CodeTabs
    attributes={null}
  >
    <pre>
      <Code
        className="language-javascript"
        lang="javascript"
        meta="multiple.js"
      >
        console.log('a multi-file code block');

      </Code>
    </pre>
    <pre>
      <Code
        className="language-javascript"
        lang="javascript"
        meta=""
      >
        console.log('an unnamed sample snippet');

      </Code>
    </pre>
  </CodeTabs>
</DivFragment>
`;

exports[`glossary 1`] = `"<p></p>"`;

exports[`headings 1`] = `
"<h1>h1</h1>
<h2>h2</h2>
<h3>h3</h3>
<h4>h4</h4>
<h5>h5</h5>
<h6>h6</h6>
<h1><code data-lang=\\"\\" name=\\"\\"><span class=\\"cm-s-neo\\">code</span></code></h1>
<h1>heading with some more CONTENT</h1>"
`;

exports[`image 1`] = `"<p><img src=\\"http://example.com/image.png\\" alt=\\"Image\\" height=\\"auto\\" width=\\"auto\\"/></p>"`;

exports[`list items 1`] = `
"<ul>
<li>listitem1</li>
</ul>"
`;

exports[`should strip out inputs 1`] = `""`;

exports[`tables 1`] = `
"
























<div class=\\"marked-table\\"><table><thead><tr><th>Tables</th><th style=\\"text-align:center\\">Are</th><th style=\\"text-align:right\\">Cool</th></tr></thead><tbody><tr><td>col 3 is</td><td style=\\"text-align:center\\">right-aligned</td><td style=\\"text-align:right\\">$1600</td></tr><tr><td>col 2 is</td><td style=\\"text-align:center\\">centered</td><td style=\\"text-align:right\\">$12</td></tr><tr><td>zebra stripes</td><td style=\\"text-align:center\\">are neat</td><td style=\\"text-align:right\\">$1</td></tr></tbody></table></div>"
`;

exports[`variables 1`] = `"<p><span>APIKEY</span></p>"`;
